[package]
name = "rvm"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["hext"]
hext = []

[dependencies]
log = "0.4"
cfg-if = "1.0"
bitflags = "1.3"
bit_field = "0.10"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.10"